Fixes: 2. faster xml version upgraded (to fix github vulnerability report) 1. Fix for sun.misc.Base64 availability on jdk 1.8