@@ -1,13 +1,14 @@
 package com.perceptnet.restclient;
 
+import com.perceptnet.commons.utils.Base64;
 import com.perceptnet.restclient.dto.HttpMethod;
 import com.perceptnet.restclient.dto.RestMethodDescription;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.misc.BASE64Encoder;
 
 import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Proxy;
+import java.nio.charset.StandardCharsets;
 
 /**
  * created by vkorovkin (vkorovkin@gmail.com) on 29.11.2017
@@ -122,8 +123,10 @@ public class BaseRestServiceProvider {
 
     private String b64(String str) {
         try {
-            BASE64Encoder e = new BASE64Encoder();
-            String result = e.encode(str.getBytes("UTF-8"));
+            String result = new String(Base64.encode(str.getBytes("UTF-8")), StandardCharsets.UTF_8);
+//            String result = new String(Base64.getEncoder().encode(str.getBytes("UTF-8")), StandardCharsets.UTF_8);
+//            BASE64Encoder e = new BASE64Encoder();
+//            String result = e.encode(str.getBytes("UTF-8"));
             return result;
         } catch (UnsupportedEncodingException e) {
             throw new RuntimeException(e);
